build/log/idf_py_stdout_output_11248
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\alexi\Documents\tflite-micro-esp-examples\examples\micro_speech\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/alexi/Documents/tflite-micro-esp-examples/examples/micro_speech/build/bootloader/bootloader.bin"
Bootloader binary size 0x6de0 bytes. 0x220 bytes (2%) free.
[2/7] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/audio_provider.cc.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/audio_provider.cc.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-g++.exe -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -IC:/Users/alexi/Documents/tflite-micro-esp-examples/examples/micro_speech/build/config -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include/arch -IC:/Users/alexi/Documents/tflite-micro-esp-examples/components/tflite-lib -IC:/Users/alexi/Documents/tflite-micro-esp-examples/components/tflite-lib/third_party/gemmlowp -IC:/Users/alexi/Documents/tflite-micro-esp-examples/components/tflite-lib/third_party/flatbuffers/include -IC:/Users/alexi/Documents/tflite-micro-esp-examples/components/tflite-lib/third_party/ruy -IC:/Users/alexi/Documents/tflite-micro-esp-examples/components/tflite-lib/third_party/kissfft -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/spi_flash/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/driver/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_timer/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=C:/Users/alexi/Documents/tflite-micro-esp-examples/examples/micro_speech=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.2=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu++20 -fno-exceptions -fno-rtti -D_GNU_SOURCE -DIDF_VER=\"v5.0.2\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -Wno-maybe-uninitialized -Wno-missing-field-initializers -Wno-error=sign-compare -Wno-error=double-promotion -Wno-type-limits -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/audio_provider.cc.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\audio_provider.cc.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/audio_provider.cc.obj -c C:/Users/alexi/Documents/tflite-micro-esp-examples/examples/micro_speech/main/audio_provider.cc
In file included from C:/Users/alexi/Documents/tflite-micro-esp-examples/examples/micro_speech/main/audio_provider.cc:29:
C:/Espressif/frameworks/esp-idf-v5.0.2/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
C:/Users/alexi/Documents/tflite-micro-esp-examples/examples/micro_speech/main/audio_provider.cc: In function 'void CaptureSamples(void*)':
C:/Users/alexi/Documents/tflite-micro-esp-examples/examples/micro_speech/main/audio_provider.cc:130:23: error: 'bytes_written' was not declared in this scope
  130 |             ((1000 * (bytes_written / 2)) / kAudioSampleFrequency);
      |                       ^~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
